--- a/src/main/angular/src/app/component/display/display-live-game/display-live-game.component.html
+++ b/src/main/angular/src/app/component/display/display-live-game/display-live-game.component.html
@@ -3,32 +3,50 @@
     <div>Momentan kein Live Spiel</div>
   </div>
   <ng-template #scoreboard>
-    <div class="grid">
-      <div class="score-home score">
-        <h1>
-          {{liveGame?.goalsTeamHome}}
-        </h1>
+    <div class="grids">
+      <div class="grid">
+        <div class="score-home score">
+          <h1>
+            {{liveGame?.goalsTeamHome}}
+          </h1>
+        </div>
+        <div class="seperator">
+          <h1><span>:</span></h1>
+        </div>
+        <div class="score-guest score">
+          <h1>
+            {{liveGame?.goalsTeamGuest}}
+          </h1>
+        </div>
+        <div class="name-home name">
+          <h2>
+            {{liveGame?.teamHome.name}}
+          </h2>
+        </div>
+        <div>
+          <!-- placeholder -->
+        </div>
+        <div class="name-guest name">
+          <h2>
+            {{liveGame?.teamGuest.name}}
+          </h2>
+        </div>
       </div>
-      <div class="seperator">
-        <h1><span>:</span></h1>
-      </div>
-      <div class="score-guest score">
-        <h1>
-          {{liveGame?.goalsTeamGuest}}
-        </h1>
-      </div>
-      <div class="name-home name">
-        <h2>
-          {{liveGame?.teamHome.name}}
-        </h2>
-      </div>
-      <div>
-        <!-- placeholder -->
-      </div>
-      <div class="name-guest name">
-        <h2>
-          {{liveGame?.teamGuest.name}}
-        </h2>
+      <div class="grid">
+        <h3 class="next-game">Nächstes Spiel</h3>
+        <div class="name-home name">
+          <h3>
+            {{nextGame?.teamHome.name}}
+          </h3>
+        </div>
+        <div class="seperator">
+          <h3><span>:</span></h3>
+        </div>
+        <div class="name-guest name">
+          <h3>
+            {{nextGame?.teamGuest.name}}
+          </h3>
+        </div>
       </div>
     </div>
   </ng-template>
