--- a/src/main/angular/src/app/component/referee/referee-chat/referee-chat.component.scss
+++ b/src/main/angular/src/app/component/referee/referee-chat/referee-chat.component.scss
@@ -5,7 +5,7 @@
 
 // you dirty dirty
 .messages-referee {
-  height: calc(100vh - 64px - 70px - 40px);
+  height: calc(100vh - 64px - 70px - 40px - 30px);
 }
 
 // you dirty dirty
