add adds in display mode

--- a/src/main/angular/src/app/component/display/display-home/display-home.component.html
+++ b/src/main/angular/src/app/component/display/display-home/display-home.component.html
@@ -5,6 +5,9 @@
   <div *ngIf="isGames()">
     <app-display-games [games]="currentDisplayble.data"></app-display-games>
   </div>
+  <div *ngIf="isAdd()">
+    <app-add [addCount]="addCount" (initialized)="incrementCount()"></app-add>
+  </div>
 </div>
 <div *ngIf="!displayMode">
   <app-timer></app-timer>
