--- a/src/main/angular/src/app/component/display/display-live-game/display-live-game.component.html
+++ b/src/main/angular/src/app/component/display/display-live-game/display-live-game.component.html
@@ -52,7 +52,5 @@
   </ng-template>
 </div>
 <ng-template #add>
-  <div class="add">
-    <img [src]="adds[addCount % adds.length]">
-  </div>
+  <app-add [addCount]="addCount"></app-add>
 </ng-template>
