--- a/src/main/angular/src/app/component/admin/admin-game-overview/admin-game-overview.component.html
+++ b/src/main/angular/src/app/component/admin/admin-game-overview/admin-game-overview.component.html
@@ -36,6 +36,12 @@
           <button mat-flat-button (click)="resetGame(element)">Zurücksetzen</button>
         </td>
       </ng-container>
+      <ng-container matColumnDef="notifyButton">
+        <th mat-header-cell *matHeaderCellDef>Benachrichtigen</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-flat-button (click)="notifyGame(element)">Benachrichtigen</button>
+        </td>
+      </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"
