--- a/src/main/angular/src/app/component/admin/admin-home/admin-home.component.html
+++ b/src/main/angular/src/app/component/admin/admin-home/admin-home.component.html
@@ -12,4 +12,10 @@
   <mat-tab label="Chat">
     <app-admin-chat></app-admin-chat>
   </mat-tab>
+  <mat-tab label="Notifications">
+    <app-admin-notifications-overview></app-admin-notifications-overview>
+  </mat-tab>
+  <mat-tab label="Send Notifications">
+    <app-admin-send-notifications></app-admin-send-notifications>
+  </mat-tab>
 </mat-tab-group>
