--- a/src/main/angular/src/app/app.component.html
+++ b/src/main/angular/src/app/app.component.html
@@ -24,6 +24,12 @@
   </mat-sidenav-container>
 </div>
 <div *ngIf="!isReferee">
+  <nav class="navbar bg-base-200 shadow-md p-4"*ngIf="location.pathname.includes('v2')">
+    <div class="container mx-auto flex justify-center md:justify-start items-center">
+      <!-- Title -->
+      <a href="/v2/public" class="text-2xl font-bold text-primary">Yetis Night</a>
+    </div>
+  </nav>
   <router-outlet class="container"></router-outlet>
 </div>
 
