--- a/src/main/angular/src/app/component/admin/admin-home/admin-home.component.html
+++ b/src/main/angular/src/app/component/admin/admin-home/admin-home.component.html
@@ -1,4 +1,4 @@
-<app-timer></app-timer>
+<app-timer (startClicked)="emitStartClicked()"></app-timer>
 <mat-tab-group>
   <mat-tab label="Spiele">
     <app-admin-game-overview></app-admin-game-overview>
