--- a/src/main/angular/src/app/app.component.html
+++ b/src/main/angular/src/app/app.component.html
@@ -1,4 +1,4 @@
-  <ng-container >
+  <ng-container *ngIf="!location.pathname.startsWith('/display')">
     <div class="navbar bg-base-100">
       <div class="navbar-start">
         <!-- Mobile menu -->
