--- a/src/main/angular/src/app/app.component.html
+++ b/src/main/angular/src/app/app.component.html
@@ -23,11 +23,18 @@
       </div>
       <div class="navbar-end hidden lg:flex">
         <!-- small toggle icon; size reduced so it sits on the same line as the navbar -->
-        <button class="btn btn-ghost navbar-toggle" title="Toggle navbar" (click)="toggleNavbar()" aria-label="Toggle navigation">
+        <div class="flex items-center space-x-2">
+          <a routerLink="/v2/notifications" class="btn btn-ghost btn-circle" title="Notifications">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6 6 0 10-12 0v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
+            </svg>
+          </a>
+          <button class="btn btn-ghost navbar-toggle" title="Toggle navbar" (click)="toggleNavbar()" aria-label="Toggle navigation">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" [class.rotate-180]="navbarCollapsed" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
           </svg>
-        </button>
+          </button>
+        </div>
       </div>
     </div>
   </ng-container>
