--- a/src/main/angular/src/styles.scss
+++ b/src/main/angular/src/styles.scss
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 // Imports functions, variables, and mixins that are needed by other Bootstrap files
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import 'tailwindcss';
+
+@plugin "daisyui";
 
 :root {
   font-family: 'Roboto';
